<resources>
    <string name="app_name">Agro Stat</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Chapitre_1">Chapitre 1</string>
    <string name="Chapitre_2">Chapitre 2</string>
    <string name="Chapitre_3">Chapitre 3</string>
    <string name="Chapitre_5">Chapitre 5</string>
    <string name="Chapitre_4">Chapitre 4</string>
    <string name="Chapter_1_title">Notion générales</string>
    <string name="Chapter_2_title">Vocabulaire en expérimentation</string>
    <string name="Chapter_3_title">Planification expérimentale</string>
    <string name="Chapter_4_title">Méthodes d’échantillonnage</string>
    <string name="Chapter_5_title">Dispositifs expérimentaux</string>
    <string name="start">Demarer</string>
    <string name="shortcut">Prend un raccourci</string>
</resources>