<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="ayoubmokeddem.github.com.agro_stat.Courses_preview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--the first card -->
        <RelativeLayout style="@style/CoursePreview_theCard">

            <TextView
                android:id="@+id/chapitre1"
                style="@style/CousesPreview_chaptre_style"
                android:text="@string/Chapitre_1" />

            <LinearLayout
                style="@style/CoursesPreview_title_nd_image_separation"
                android:layout_below="@id/chapitre1">

                <TextView
                    style="@style/CoursesPreview_Chaptre_title_style"
                    android:text="@string/Chapter_1_title" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CoursesPreview_ImageView_Studying_icon" />
            </LinearLayout>
        </RelativeLayout>


        <!--the second card -->
        <RelativeLayout style="@style/CoursePreview_theCard">

            <TextView
                android:id="@+id/chapitre2"
                style="@style/CousesPreview_chaptre_style"
                android:text="@string/Chapitre_2" />

            <LinearLayout
                style="@style/CoursesPreview_title_nd_image_separation"
                android:layout_below="@id/chapitre2">

                <TextView
                    style="@style/CoursesPreview_Chaptre_title_style"
                    android:text="@string/Chapter_2_title" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CoursesPreview_ImageView_Studying_icon" />
            </LinearLayout>
        </RelativeLayout>


        <!--the thered card -->
        <RelativeLayout style="@style/CoursePreview_theCard">

            <TextView
                android:id="@+id/chapitre3"
                style="@style/CousesPreview_chaptre_style"
                android:text="@string/Chapitre_3" />

            <LinearLayout
                style="@style/CoursesPreview_title_nd_image_separation"
                android:layout_below="@id/chapitre3">

                <TextView
                    style="@style/CoursesPreview_Chaptre_title_style"
                    android:text="@string/Chapter_3_title" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CoursesPreview_ImageView_Studying_icon"/>
            </LinearLayout>
        </RelativeLayout>


        <!--the fourth card -->
        <RelativeLayout style="@style/CoursePreview_theCard">

            <TextView
                android:id="@+id/chapitre4"
                style="@style/CousesPreview_chaptre_style"
                android:text="@string/Chapitre_4" />

            <LinearLayout
                style="@style/CoursesPreview_title_nd_image_separation"
                android:layout_below="@id/chapitre4">

                <TextView
                    style="@style/CoursesPreview_Chaptre_title_style"
                    android:text="@string/Chapter_4_title" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CoursesPreview_ImageView_Studying_icon" />
            </LinearLayout>
        </RelativeLayout>


        <!--the fifth card -->
        <RelativeLayout style="@style/CoursePreview_theCard">

            <TextView
                android:id="@+id/chapitre5"
                style="@style/CousesPreview_chaptre_style"
                android:text="@string/Chapitre_5" />

            <LinearLayout
                style="@style/CoursesPreview_title_nd_image_separation"
                android:layout_below="@id/chapitre5">

                <TextView
                    style="@style/CoursesPreview_Chaptre_title_style"
                    android:text="@string/Chapter_5_title" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CoursesPreview_ImageView_Studying_icon" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
